--- a/grub.cfg
+++ b/grub.cfg
@@ -1,8 +1,8 @@
 set default=0
 
 loadfont /boot/grub/unicode.pf2
-loadfont /boot/grub/ayyildiz/ashbury_tr.pf2
-loadfont /boot/grub/ayyildiz/dejavu_14.pf2
+loadfont /boot/grub/gun-batimi/ashbury_tr.pf2
+loadfont /boot/grub/gun-batimi/dejavu_14.pf2
 
 set gfxmode=1024x768
 set gfxpayload=keep
@@ -17,34 +17,34 @@ insmod png
 
 background_image /isolinux/splash.png
 
-set theme=/boot/grub/ayyildiz/theme.txt
+set theme=/boot/grub/gun-batimi/theme.txt
 
 terminal_output gfxterm
 
 submenu "Türkçe" {
 
-  set theme=/boot/grub/ayyildiz/theme.txt
+  set theme=/boot/grub/gun-batimi/theme.txt
 
-  menuentry "Pardus Çalışan" {
-    linux  /live/vmlinuz boot=live components timezone=Europe/Istanbul locales=tr_TR.UTF-8,en_US.UTF-8 keyboard-layouts=tr username=pardus hostname=pardus user-fullname=Pardus findiso=${iso_path} vga=791 splash quiet --
+  menuentry "Bismih Çalışan" {
+    linux  /live/vmlinuz boot=live components timezone=Europe/Istanbul locales=tr_TR.UTF-8,en_US.UTF-8 keyboard-layouts=tr username=bismih hostname=bismih user-fullname=Bismih findiso=${iso_path} vga=791 splash quiet --
     initrd  /live/initrd.img
   }
-  menuentry "Pardus Çalışan (f klavye)" {
-    linux  /live/vmlinuz boot=live components timezone=Europe/Istanbul locales=tr_TR.UTF-8,en_US.UTF-8 keyboard-layouts=tr keyboard-variants=f username=pardus hostname=pardus user-fullname=Pardus findiso=${iso_path} vga=791 splash quiet --
+  menuentry "Bismih Çalışan (f klavye)" {
+    linux  /live/vmlinuz boot=live components timezone=Europe/Istanbul locales=tr_TR.UTF-8,en_US.UTF-8 keyboard-layouts=tr keyboard-variants=f username=bismih hostname=bismih user-fullname=Bismih findiso=${iso_path} vga=791 splash quiet --
     initrd  /live/initrd.img
   }
 
   menuentry "Grafik Arayüz ile Kur" {
-    linux  /install/gtk/vmlinuz vga=791 theme=pardusdark  --- quiet
+    linux  /install/gtk/vmlinuz vga=791 theme=bismihdark  --- quiet
     initrd  /install/gtk/initrd.gz
   }
 
   submenu "Diğer Kurulum Seçenekleri..." {
 
-  set theme=/boot/grub/ayyildiz/theme.txt
+  set theme=/boot/grub/gun-batimi/theme.txt
 
-    menuentry "Pardus Çalışan (güvenli kip)" {
-      linux  /live/vmlinuz boot=live components timezone=Europe/Istanbul locales=tr_TR.UTF-8,en_US.UTF-8 keyboard-kayouts=tr username=pardus hostname=pardus user-fullname=Pardus memtest noapic noapm nodma nomce nolapic nomodeset nosmp nosplash vga=normal findiso=${iso_path}
+    menuentry "Bismih Çalışan (güvenli kip)" {
+      linux  /live/vmlinuz boot=live components timezone=Europe/Istanbul locales=tr_TR.UTF-8,en_US.UTF-8 keyboard-kayouts=tr username=bismih hostname=bismih user-fullname=Bismih memtest noapic noapm nodma nomce nolapic nomodeset nosmp nosplash vga=normal findiso=${iso_path}
       initrd  /live/initrd.img
     }
 
@@ -54,7 +54,7 @@ submenu "Türkçe" {
     }
 
     menuentry "Kur (metin tabanlı koyu tema)" {
-      linux  /install/vmlinuz vga=normal theme=pardusdark  --- quiet
+      linux  /install/vmlinuz vga=normal theme=bismihdark  --- quiet
       initrd  /install/initrd.gz
     }
 
@@ -64,7 +64,7 @@ submenu "Türkçe" {
     }
 
     menuentry "Grafik Arayuz ile Kur (koyu tema)" {
-      linux  /install/gtk/vmlinuz vga=791 theme=pardusdark  --- quiet
+      linux  /install/gtk/vmlinuz vga=791 theme=bismihdark  --- quiet
       initrd  /install/gtk/initrd.gz
     }
 
@@ -74,24 +74,24 @@ submenu "Türkçe" {
 
 submenu "English" {
   
-  set theme=/boot/grub/ayyildiz/theme.txt
+  set theme=/boot/grub/gun-batimi/theme.txt
 
-  menuentry "Pardus Live" {
-    linux  /live/vmlinuz boot=live components locales=en_US.UTF-8 keyboard-layouts=en username=pardus hostname=pardus user-fullname=Pardus findiso=${iso_path} vga=791 splash quiet --
+  menuentry "Bismih Live" {
+    linux  /live/vmlinuz boot=live components locales=en_US.UTF-8 keyboard-layouts=en username=bismih hostname=bismih user-fullname=Bismih findiso=${iso_path} vga=791 splash quiet --
     initrd  /live/initrd.img
   }
 
   menuentry "Graphical Installer" {
-    linux  /install/gtk/vmlinuz vga=791 theme=pardusdark  --- quiet
+    linux  /install/gtk/vmlinuz vga=791 theme=bismihdark  --- quiet
     initrd  /install/gtk/initrd.gz
   }
 
   submenu "Other Install Options..." {
 
-  set theme=/boot/grub/ayyildiz/theme.txt
+  set theme=/boot/grub/gun-batimi/theme.txt
 
-    menuentry "Pardus Live (safe mode)" {
-      linux  /live/vmlinuz boot=live components locales=en_US.UTF-8 keyboard-kayouts=en username=pardus hostname=pardus user-fullname=Pardus memtest noapic noapm nodma nomce nolapic nomodeset nosmp nosplash vga=normal findiso=${iso_path}
+    menuentry "Bismih Live (safe mode)" {
+      linux  /live/vmlinuz boot=live components locales=en_US.UTF-8 keyboard-kayouts=en username=bismih hostname=bismih user-fullname=Bismih memtest noapic noapm nodma nomce nolapic nomodeset nosmp nosplash vga=normal findiso=${iso_path}
       initrd  /live/initrd.img
     }
 
@@ -101,7 +101,7 @@ submenu "English" {
     }
 
     menuentry "Text Installer (dark theme)" {
-      linux  /install/vmlinuz vga=normal theme=pardusdark  --- quiet
+      linux  /install/vmlinuz vga=normal theme=bismihdark  --- quiet
       initrd  /install/initrd.gz
     }
 
@@ -111,7 +111,7 @@ submenu "English" {
     }
 
     menuentry "Graphical Installer (dark theme)" {
-      linux  /install/gtk/vmlinuz vga=791 theme=pardusdark  --- quiet
+      linux  /install/gtk/vmlinuz vga=791 theme=bismihdark  --- quiet
       initrd  /install/gtk/initrd.gz
     }
 
